# request_api

./: pyproject.toml  readme.md
src/: config.py  exceptions.py
src/data/interfaces/: swapi_api_consumer.py
src/data/usescases/: starships_colector.py
src/domain/usecases/: starships_colector.py
src/infra/: swapi_api_consumer.py
tests/: conftest.py
tests/data/usescases/starships_colector/: test_star_ships_list_colector.py
tests/infra/swapi_api_consumer/: test_swapi_api_consumer.py
