[tool.poetry]
name = "request-api"
version = "0.1.0"
description = ""
authors = ["VICTOR HUGO <victor.oliveira@willbank.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.13.5"
pre-commit = "^2.18.1"
black = "^22.3.0"
requests = "^2.27.1"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
